--- a/.github/workflows/build-teacher-edition.yml
+++ b/.github/workflows/build-teacher-edition.yml
@@ -4,18 +4,19 @@ name: Build Teachers Edition
 on:
   push:
     paths:
-      - 'teacher-edition/**'
+      - "teacher-edition/**"
+    workflow_dispatch:
 jobs:
   makepdfs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: mkrakowitzer/actions-makepdfs@master
-      if: github.ref == 'refs/heads/main'
-      with:
-        markdown_dir: doc
-        output_dir: tmp
-    - uses: actions/upload-artifact@v1
-      with:
-        name: platform-architecture-docs
-        path: tmp
+      - uses: actions/checkout@v1
+      - uses: mkrakowitzer/actions-makepdfs@master
+        if: github.ref == 'refs/heads/main'
+        with:
+          markdown_dir: doc
+          output_dir: tmp
+      - uses: actions/upload-artifact@v1
+        with:
+          name: platform-architecture-docs
+          path: tmp
